apps/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ingress
  template:
    metadata:
      labels:
        app: test-ingress
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80
