apps/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
spec:
  selector:
    app: test-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
